@@ -1,3 +1,5 @@
+- Use TLS instead of SSLv3 (SSLv3 has security issues).
+
 ---------------------------------------------
 1.1.3 (2014-01-28)
 
